--- a/web_ui/index.html
+++ b/web_ui/index.html
@@ -6,16 +6,42 @@
     <title>Simple Web Page</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/12db475d55.js" crossorigin="anonymous"></script>
-    <script type="module" src="main.js"></script>
 </head>
 <body>
     <h1>Welcome to My Simple Web Page</h1>
     <div class="search-box">
         <input id="input" class="search-txt" type="text" name="" placeholder="Type to search">
-        <a class="search-btn" href="#" onclick="searching()">
-            <i class="fa-solid fa-magnifying-glass" style="color: #000000;" onclick="searching()"></i>
+        <a class="search-btn" id="button" href="#" >
+            <i class="fa-solid fa-magnifying-glass" style="color: #000000;" ></i>
         </a>
     </div>    
-    
+    <div id="content"></div>
 </body>
+<script>
+    document.getElementById("button").addEventListener("click", function() {
+      var base_url = document.getElementById("input").value;
+      // ---------- constant HTTP endpoint -----------
+      // for POST: https://ap-southeast-1.aws.data.mongodb-api.com/app/application-0-xtvas/endpoint/web_browser/insertOne
+      // for GET: https://ap-southeast-1.aws.data.mongodb-api.com/app/application-0-xtvas/endpoint/web_browser/findOne
+      var xhr = new XMLHttpRequest();
+      // Create an object with the data you want to send
+      var dataToSend = {
+          from: "web browser"
+      };
+      var url = base_url + "?date=27/09/2023";
+      var jsonData = JSON.stringify(dataToSend);
+      xhr.open("GET", url); // change to POST if you want
+      xhr.setRequestHeader("Content-Type", "application/json"); // Specify JSON content type
+      xhr.responseType = 'json';
+      xhr.send(jsonData);
+      xhr.onload = function() {
+        if (xhr.status === 200) {
+          const response = JSON.stringify(xhr.response);
+          document.getElementById("content").innerHTML = response;
+        } else {
+          document.getElementById("content").innerHTML = "Error loading URL";
+        }
+      };
+    });
+  </script>
 </html>
