them header sign in/up, link home <-> sign in/up, them candidate

--- a/javascript_login/public/index.html
+++ b/javascript_login/public/index.html
@@ -5,10 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Response sliding login & sign up</title>
         <link rel ="stylesheet" href="style.css">
+        <link rel ="stylesheet" href="C:/Users/as/Desktop/GoodTransportManagement/web_ui/css">
 <link rel ="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     </head>
-<body>
+    <header>
+        <nav>
+            <div class="container"> <a class="navbar-brand navbar-logo" href="C:\Users\as\Desktop\GoodTransportManagement\web_ui\html\index copy.html"> <h1>IotClown</h1> </a>
+        </nav>
+    </header>
     
+<body>
     <div   class="form-container sign-in-form">
         <div class="form-box sign-in-box">
             <h2>Login</h2>
