--- a/javascript_login/public/index2.html
+++ b/javascript_login/public/index2.html
@@ -8,6 +8,11 @@
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 
     </head>
+    <header>
+        <nav>
+            <div class="container"> <a class="navbar-brand navbar-logo" href="C:\Users\as\Desktop\GoodTransportManagement\web_ui\html\index copy.html"> <h1>IotClown</h1> </a>
+        </nav>
+    </header>
     <body>
         <div   class="form-container sign-up-form">
         <div>
