--- a/web_ui/html/index copy.html
+++ b/web_ui/html/index copy.html
@@ -27,12 +27,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"> <a class="nav-link" href="#" >Home</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="controler.html" >Control</a> </li>
-        <li class="nav-item" > <a class="nav-link" href="analyze.html" >Analyze</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" >Team</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" >Testimonials</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" >Faq</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" >Contact</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="C:\Users\as\Desktop\GoodTransportManagement\javascript_login\public\index.html" >Sign In</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="C:\Users\as\Desktop\GoodTransportManagement\javascript_login\public\index2.html" >Sign Up</a> </li>
       </ul>
     </div>
   </div>
