charts fetch data - first hosting (not debugged yet )

--- a/web_ui/public/html/controler.html
+++ b/web_ui/public/html/controler.html
@@ -17,8 +17,8 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://kit.fontawesome.com/12db475d55.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
+<!-- onload="if (document.referrer == '') self.location= 'https:\/\/iot-lab-59822.web.app/' ;" -->
     <!-- Navbar -->
 <nav class="navbar navbar-expand-lg">
   <div class="container"> <a class="navbar-brand navbar-logo" href="#"> <h1>IotClown</h1> </a>
