--- a/web_ui/public/html/home.html
+++ b/web_ui/public/html/home.html
@@ -20,6 +20,7 @@
 </head>
 
 <body >
+<!-- onload="if (document.origin != 'https:\/\/iot-lab-59822.web.app/' ) self.location= 'https:\/\/iot-lab-59822.web.app/' ;" -->
     <!-- Navbar -->
 <nav class="navbar navbar-expand-lg">
   <div class="container"> <a class="navbar-brand navbar-logo" href="#"> <h1>IotClown</h1> </a>
