--- a/web_ui/public/html/analyze.html
+++ b/web_ui/public/html/analyze.html
@@ -19,6 +19,8 @@
   </script>
 </head>
 <body>
+<!--  onload="if (document.referrer == '') self.location= 'https:\/\/iot-lab-59822.web.app/' ;" -->
+
     <!-- Navbar -->
 <nav class="navbar navbar-expand-lg">
   <div class="container"> <a class="navbar-brand navbar-logo" href="#"> <h1>IotClown</h1> </a>
