--- a/web_ui/html/controler.html
+++ b/web_ui/html/controler.html
@@ -103,7 +103,13 @@
               </div>
             </div>
           </div>
-          
+          <ul class="progressbar">
+            <li class="complete">Step 1</li>
+            <li class="active">Step 2</li>
+            <li >Step 3</li>
+            <li>Step 4</li>
+            <li>Step 5</li>
+          </ul>
       </div>
     </div>
   </div>
