--- a/web_ui/public/html/controler.html
+++ b/web_ui/public/html/controler.html
@@ -105,10 +105,10 @@
           </div>
           <ul class="progressbar">
             <li class="complete">Step 1</li>
-            <li class="active">Step 2</li>
-            <li >Step 3</li>
-            <li>Step 4</li>
-            <li>Step 5</li>
+            <li class="complete">Step 2</li>
+            <li class="complete">Step 3</li>
+            <li class="active">Step 4</li>
+            <li >Step 5</li>
           </ul>
       </div>
     </div>
