--- a/web_ui/public/html/controler.html
+++ b/web_ui/public/html/controler.html
@@ -118,7 +118,6 @@
           <div class="sectioner-header text-center">
             <h3>Make Order</h3>
             <span class="line"></span>
-            <p></p>
           </div>
           <div class="section-content">
             <div class="row" >
@@ -126,15 +125,16 @@
                 <form id="contact_form" action="">
                   <div class="row">
                     <div class="col">
-                      <input type="text" id="your_name" class="form-input w-100" name="full-name" placeholder="Product ID" required>
+                      <input type="text" id="product_id" class="form-input w-100" name="full-name" placeholder="Product ID" required>
                     </div>
                     <div class="col">
-                      <input type="email" id="email" class="form-input w-100" name="email" placeholder="Quantity" required>
+                      <input type="text" id="product_quantity" class="form-input w-100" name="email" placeholder="Quantity" required>
                     </div>
                   </div>
-                  <input type="text" id="subject" class="form-input w-100" name="subject" placeholder="Subject">
+                  <input type="text" id="from_station" class="form-input w-100" name="subject" placeholder="From">
+                  <input type="text" id="to_station" class="form-input w-100" name="subject" placeholder="To">
                   <textarea class="form-input w-100" id="message" placeholder="Message" name="message"></textarea>
-                  <button class="btn-grad w-100 text-uppercase" type="submit" name="button">submit</button>
+                  <button class="btn-grad w-100 text-uppercase" id="make_order_submit" type="submit" name="button">submit</button>
                 </form>
               </div>
               <div class="col-sm-12 col-md-12 col-lg-4">
